--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -9,8 +9,11 @@
     <body ng-app="rootApplication">
         <div id="hero">
             <canvas width="1500" height="550"></canvas>
+            <div>
+                <img src="{% static 'home/imgs/avatar.jpg' %}"/>
+                <span>Joshua Potter</span>
+            </div>
         </div>
-
         <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js"></script>-->
         <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
         <script src="{% static 'home/js/home.js' %}"></script>
