--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -14,6 +14,16 @@
                 <span>Joshua Potter</span>
             </div>
         </div>
+        <div id="content">
+            <div id="navigation">
+                <ul>
+                    <li class="active"><span>Projects</span></li>
+                    <li><span>Blog</span></li>
+                    <li><span>Research</span></li>
+                    <li><span>Contact</span></li>
+                </ul>
+            </div>
+        </div>
         <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js"></script>-->
         <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
         <script src="{% static 'home/js/home.js' %}"></script>
