--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -69,6 +69,18 @@
                 <div class="description"></div>
             </section>
         </div>
+        <div id="footer">
+            <div class="about-me">
+
+            </div>
+            <form id="contact-form">
+                <fieldset>
+                    <legend>Contact Me</legend>
+                    <input type="email" placeholder="Your Email">
+                    <textarea placeholder="Your Message"></textarea>
+                </fieldset>
+            </form>
+        </div>
         <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js"></script>-->
         <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
         <script src="{% static 'home/js/home.js' %}"></script>
