--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -6,6 +6,9 @@
         <link type="text/css" rel="stylesheet" href="{% static 'foundation/stylesheets/foundation.css' %}" />
         <link type="text/css" rel="stylesheet" href="{% static 'home/css/index.css' %}" />
         <link type="text/css" rel="stylesheet" href="{% static 'projects/css/projects.css' %}" />
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.js"></script>
+        <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
+        <script src="{% static 'home/js/home.js' %}"></script>
     </head>
     <body ng-app="rootApplication">
         <div id="hero">
@@ -21,64 +24,30 @@
                 </div>
             </div>
         </div>
-        <div id="content">
+        <div id="content" ng-controller="ContentController as content">
             <div id="navigation">
                 <ul>
-                    <li class="active"><span>Projects</span></li>
-                    <li><span>Blog</span></li>
-                    <li><span>Research</span></li>
+                    <li ng-class="{ active: content.isSet(1) }">
+                        <span ng-click="content.setTab(1)">Projects</span>
+                    </li>
+                    <li ng-class="{ active: content.isSet(2) }">
+                        <span ng-click="content.setTab(2)">Blog</span>
+                    </li>
+                    <li ng-class="{ active: content.isSet(3) }">
+                        <span ng-click="content.setTab(3)">Research</span>
+                    </li>
                     <li><span>Contact</span></li>
                 </ul>
             </div>
-            <!-- Partial -->
-            <span id="content-description">List of notable projects I've worked on recently.</span>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/appetite.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/fifth-cam.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/gitit-notes.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/lodestar.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/mingle.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/mini-java.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
-            <section class="project">
-                <div class="icon">
-                    <img src="{% static 'projects/imgs/project-euler.png' %}" />
-                </div>
-                <div class="description"></div>
-            </section>
+            <div id="content-description">
+                <span ng-show="content.isSet(1)">List of notable projects I've worked on recently.</span>
+                <span ng-show="content.isSet(2)">My latest blog posts.</span>
+                <span ng-show="content.isSet(3)">My latest research posts.</span>
+            </div>
+            <div ng-show="content.isSet(1)" ng-include="'projects/partials/list/'"></div>
         </div>
         <div id="footer">
-            <div class="about-me">
-
-            </div>
+            <div class="about-me"></div>
             <form id="contact-form">
                 <fieldset>
                     <legend>Contact Me</legend>
@@ -87,8 +56,5 @@
                 </fieldset>
             </form>
         </div>
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.min.js"></script>-->
-        <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
-        <script src="{% static 'home/js/home.js' %}"></script>
     </body>
 </html>
