--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -10,7 +10,8 @@
         <script src="{% static 'foundation/javascripts/foundation.min.js' %}"></script>
         <script src="{% static 'home/js/home.js' %}"></script>
     </head>
-    <body ng-app="rootApplication">
+    <body style="position: relative;" ng-app="rootApplication">
+	<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
         <div id="hero">
             <canvas width="1500" height="550"></canvas>
             <div id="hero-container">
