--- a/apps/blog/templates/blog/partials/list.html
+++ b/apps/blog/templates/blog/partials/list.html
@@ -4,7 +4,7 @@
         <img src="static/blog/imgs/{{ post.img_src }}" />
     </div>
     <div class="post-container">
-        <div class="title">{{ post.title }}</div>
+        <div class="title"><a href="blog/{{ post.id }}" target="_blank">{{ post.title }}</a></div>
         <div class="date">{{ post.date | date:'longDate' }}</div>
         <p>{{ post.description }}</p>
     </div>
