--- a/apps/base/static/base/css/base.css
+++ b/apps/base/static/base/css/base.css
@@ -65,6 +65,11 @@ body {
     padding-top: 20px;
 }
 
+#content {
+    margin-top: -4px; /* Webkit bug; div does not surround canvas */
+    border-top: 2px solid #222222;
+}
+
 #footer {
     height: 250px;
     background-color: #222;
