--- a/apps/blog/static/blog/css/blog.css
+++ b/apps/blog/static/blog/css/blog.css
@@ -42,3 +42,29 @@
     font-style: italic;
     padding-bottom: 10px;
 }
+
+#post-content {
+    width: 80%;
+    margin: 0 auto;
+    font-family: quicksand;
+}
+
+#post-content .title {
+    font-size: 40px;
+    padding-top: 15px;
+    padding-left: 10px;
+    font-family: quicksand-bold;
+}
+
+#post-content .date {
+    clear: right;
+    padding: 5px 0;
+    font-size: 20px;
+    padding-left: 10px;
+    border-bottom: 3px dotted #CCC;
+}
+
+#post-content .entry {
+    padding: 10px;
+    margin-bottom: 10px;
+}
