--- a/apps/blog/templates/blog/partials/list.html
+++ b/apps/blog/templates/blog/partials/list.html
@@ -1,11 +1,11 @@
 {% verbatim %}
 <section class="post" ng-repeat="post in content.posts">
     <div class="icon">
-        <img src="static/blog/imgs/{{ post.img_src }}" />
+        <img src="static/blog/imgs/{{ post.category.img_src }}" />
     </div>
     <div class="post-container">
         <div class="title"><a href="blog/{{ post.id }}" target="_blank">{{ post.title }}</a></div>
-        <div class="date">{{ post.date | date:'longDate' }}</div>
+        <div class="date">{{ post.date_added | date:'longDate' }}</div>
         <p>{{ post.description }}</p>
     </div>
 </section>
