--- a/apps/projects/static/projects/css/projects.css
+++ b/apps/projects/static/projects/css/projects.css
@@ -18,6 +18,7 @@
 #content .project .icon img {
     width: 225px;
     height: 225px;
+    border: 5px solid #CCC;
     border-radius: 2000px;
 }
 
