--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -36,5 +36,6 @@
             </div>
             <div ng-show="content.isSet(1)" ng-include="'projects/partials/list/'"></div>
             <div ng-show="content.isSet(2)" ng-include="'blog/partials/list/'"></div>
+            <div ng-show="content.isSet(3)" ng-include="'research/partials/list/'"></div>
         </div>
 {% endblock %}
