--- a/apps/home/static/home/css/index.css
+++ b/apps/home/static/home/css/index.css
@@ -37,3 +37,41 @@
 #navigation ul li span {
     cursor: pointer;
 }
+
+#content .listing {
+    width: 80%;
+    clear: both;
+    height: 280px;
+    margin: 0 auto;
+    position: relative;
+    padding: 30px 45px;
+    font-family: quicksand;
+    border-top: 1px solid #CCC;
+}
+
+#content .listing .icon {
+    float: left;
+    padding-right: 25px;
+    padding-bottom: 30px;
+}
+
+#content .listing .icon img {
+    width: 225px;
+    height: 225px;
+    border: 5px solid #CCC;
+    border-radius: 2000px;
+}
+
+#content .listing .title {
+    font-size: 25px;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    text-decoration: underline;
+    font-family: quicksand-bold;
+}
+
+#content .listing .date {
+    font-size: 15px;
+    font-style: italic;
+    padding-bottom: 10px;
+}
