--- a/apps/base/templates/base/base.html
+++ b/apps/base/templates/base/base.html
@@ -20,7 +20,7 @@
                 <div id="hero-outer">
                     <div id="hero-middle">
                         <div id="hero-inner">
-                            <img src="{% static 'base/imgs/avatar.jpg' %}"/>
+                            <a href="/"><img src="{% static 'base/imgs/avatar.jpg' %}"/></a>
                             <span>Joshua Potter</span>
                         </div>
                     </div>
