--- a/apps/base/templates/base/base.html
+++ b/apps/base/templates/base/base.html
@@ -14,6 +14,7 @@
         {% block javascript %}{% endblock %}
     </head>
     <body ng-app="rootApplication">
+        {% block preamble %}{% endblock %}
         <div id="hero">
             <canvas width="1500" height="550"></canvas>
             <div id="hero-container">
