living in van post

--- a/apps/blog/templates/blog/entries/2016/May/1_1.html
+++ b/apps/blog/templates/blog/entries/2016/May/1_1.html
@@ -2,5 +2,40 @@
 {% load static %}
 
 {% block post_content %}
-    Testing
+    I've been meaning to write this post for a long time, but only now have really gotten around to it. I've just started
+    my employment at Google and finished a cross country trip in the car I plan on sleeping in. It's been difficult
+    managing my time for the past month, but, with everything starting to settle into a routine, I've finally found
+    a moment in which it made sense to write this post instead of doing something else.
+
+    Honestly, there isn't too much too write; the purpose of avoiding an apartment for the time being is pretty
+    straightforward and any basic YouTube search on "Why I choose to live in a van" will bring a countless number of
+    other videos explaining exactly what I'll be writing. But, regurgitation aside, this will still be useful for me
+    to kind of lay down certain principles that I feel are pertinent to the next six to twelve months.
+
+    First and foremost, I have developed a schedule that I plan on following for the next six months at least, and
+    this schedule primarily consists of exercise, studying, and reading. Google provides multiple gyms and desk areas
+    for me to workout and learn respectively; I do not need an apartment for either need to be met and it would be
+    a waste of money for me to purchase a place for this reason. In fact, the only reason I would ever go to an
+    apartment, should I have one, is for sleep, and ultimately it seems almost irresponsible to spend an average of $2000
+    a month for a place devoted to going unconscious in.
+
+    Second, I want to employ a more minimalistic lifestyle. I believe, in general, that people take many belongings for
+    granted and as necessities, when this is actually very far from the truth. I've abandoned many toys and gadgets because
+    living in a van forces me to prioritize what is essential. While I initially planned on getting space through
+    a public storage unit, I had to reevaluate this as it would violate the core philosophy of less being more. And despite
+    this, space is still a problem, and I still feel I have more than I need. I'll continue filtering the needed from
+    the superfluous as time goes on.
+
+    Lastly, I've always had a curiosity as to doing this sort of thing since I was young. I've had fantasies on being
+    homeless or a hobo for as long as I can remember and now I have the opportunity to ease into this lifestyle
+    voluntarily. I do not anticipate this being something I push further, but it is comforting knowing if I do dislike
+    doing this, I can always just get an apartment when the time comes. But I would not feel as comfortable doing the opposite.
+    That is, I could live in a car, hate it, and then move into an apartment, but I feel I would not be so inclined to
+    live in an apartment, hate it, then move into my car. Especially considering I would have space to purchase more things
+    and then would have to somehow get rid of all my possessions that I purchased, wasting a lot of money.
+
+    In the end, there is certainly a romantic aspect to this lifestyle that I've never been able to shake, and now that I
+    have the chance to scratch this itch, I intend on scratching it. This year may be the only period of time I can
+    attempt this and, despite the discouraging responses I've gotten or the incredulous looks I've received, I feel it's
+    important (bordering crucial) that I at least get this notion out of my system.
 {% endblock %}
